# RPG

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  credits.txt  main  makefile  readme.md
content/maps/: buildings.tsx  gw_tileset.tsx  gw_tileset64.tsx  indoor.tsx  map1.tmx  map164.tmx  map2.tmx  map_nature.tmx  nature.tsx  outdoor.tsx  player_home.tmx  terrain-map.tsx  terrain-v7.tsx  testing_map.tmx  trees.tmx  trying.tmx  trying2.tmx
content/sprites/: character.xcf
game/include/: animatedsprite.h  axe.h  game.h  graphics.h  input.h  kbh.h  line.h  rectangle.h  renderable.h  sprite.h  thing.h  utils.h  weapon.h  xypair.h
game/source/: animatedtile.cpp  axe.cpp  collision.cpp  game.cpp  graphics.cpp  input.cpp  kbh.cpp  main.cpp  player.cpp  textbox.cpp  weapon.cpp
source/include/: animatedsprite.h  animatedtile.h  axe.h  bow.h  dds.h  door.h  game.h  globals.h  graphics.h  hud.h  ims.h  input.h  inventory.h  kbh.h  level.h  line.h  player.h  rectangle.h  renderable.h  signpost.h  slope.h  sprite.h  textbox.h  thing.h  tile.h  utils.h  weapon.h
source/src/: animatedsprite.cpp  animatedtile.cpp  axe.cpp  bow.cpp  collision.cpp  game.cpp  graphics.cpp  hud.cpp  ims.cpp  input.cpp  inventory.cpp  kbh.cpp  level.cpp  load_map.cpp  loadmap.cpp  main.cpp  player.cpp  sprite.cpp  textbox.cpp  thing.cpp  tile.cpp  weapon.cpp
